== Change Log

=== SVN
* Update to latest Prototype and script.aculo.us and refactor and extract inline 
  Javascript into external files. [Mislav Marohnic]
* Narrow scope of exception to only throw on missing fixture files, allowing 
  invalid yaml errors through. [Daniel Sheppard]
* Added tests to ensure that response_cache stays within the cache dir. 
  [Daniel Sheppard]
* Add assert_requires_login to LoginTestHelper. [Sean Cribbs]
* Make sure tag binding stack is popped when an exception occurs. [jay@jay.fm]
* Clean up some apparent cruft in page.rb [Daniel Sheppard]
* Add logout method to LoginTestHelper. [Sean Cribbs]
* Run single extension tests with rake test:extensions EXT=<extension_name>
  [Brian Skahan]
* Update Javascript libraries to Prototype 1.6.0_rc1 and script.aculo.us 
  1.8.0_pre1. [Mislav Marohnic]
* Fixed <r:attempted_url /> tag to escape the uri [Daniel Sheppard]
* Allow parts to be accessed by name from Page#part before they are saved.
  [Sean Cribbs]
* Disambiguate namespace of ActionMailer::Part. [Sean Cribbs]
* Fix namespacing problem with ActionController::RoutingError. [Sean Cribbs]
* Update Rails to 1.2.5. [John Long]
* Ensured that the request and response are passed along to other pages that
  are rendered within the same context. [John Long]
* Added <r:if_dev /> and <r:unless_dev /> tags. [Peter Berkenbosch]
* Removed session stringification patch in test helper. [Sean Cribbs]
* Update Rails to 1.2.4. [Sean Cribbs]
* Add extensions paths to the standard $LOAD_PATH so requires work properly.
  [Sean Cribbs]
* Fixed some loading issues for plugins that are included in extensions. 
  [Sean Cribbs]

=== 0.6.3 Rock Grinder
* Add generic public/ copy task to generated extensions. [Sean Cribbs]
* Fix typo in StandardTags. [oli]
* Added db:remigrate:extensions task. [Sean Cribbs]
* Show all child pages on remove confirmation, regardless of sitemap expansion.
  [Sean Cribbs]