@@ -5,6 +5,7 @@ The following people have submitted changes which have been applied to the
 core:
 
 === SVN
+* Bodhi Philpot
 * jay@jay.fm
 * Brian Skahan
 * Mislav Marohnic
